Added Systemd Service and some cleanup

--- a/templates/noip-duc.conf.j2
+++ b/templates/noip-duc.conf.j2
@@ -1,6 +1,8 @@
-NOIP_USERNAME={{ noip.username }}
-NOIP_PASSWORD={{ noip.password }}
-NOIP_HOSTNAMES={{ domain1.com,domain2.com }}
+# NOIP-DUC Dynamic Update Client - Config - Managed by Ansible
+NOIP_USERNAME={{ noip_username }}
+NOIP_PASSWORD={{ noip_password }}
+NOIP_HOSTNAMES={% for item in noip_domain_names %}{{ item }}{% if not loop.last %},{% endif %}{% endfor %}
+
 NOIP_EXEC_ON_CHANGE=
-NOIP_CHECK_INTERVAL={{ 900 }}
+NOIP_CHECK_INTERVAL={{ noip_check_interval }}
 NOIP_LOG_LEVEL=info
